--- a/backend/app/create_db_docs.ipynb
+++ b/backend/app/create_db_docs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +23,7 @@
        "True"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
        " Document(page_content=\"new Date() is not idempotent as it always returns the current date and changes its result every time it's called. When you render the above component, the time displayed on the screen will stay stuck on the time that the component was rendered. Similarly, functions like Math.random() also aren't idempotent, because they return different results every time they're called, even when the inputs are the same.\\n\\nThis doesn't mean you shouldn't use non-idempotent functions like new Date() at all – you should just avoid using them during render. In this case, we can synchronize the latest date to this component using an Effect:\\n\\n```js\\nimport { useState, useEffect } from 'react';\", metadata={'source': 'react.dev-main/src/content/reference/rules/components-and-hooks-must-be-pure.md'})]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,15 +192,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[Document(page_content=\"title: useEffect\\n\\nuseEffect is a React Hook that lets you synchronize a component with an external system.\\n\\njs\\nuseEffect(setup, dependencies?)\\n\\nReference {/reference/}\\n\\nuseEffect(setup, dependencies?) {/useeffect/}\\n\\nCall useEffect at the top level of your component to declare an Effect:\\n\\n```js\\nimport { useEffect } from 'react';\\nimport { createConnection } from './chat.js';\\n\\nfunction ChatRoom({ roomId }) {\\n  const [serverUrl, setServerUrl] = useState('https://localhost:1234');\\n\\nuseEffect(() => {\\n    const connection = createConnection(serverUrl, roomId);\\n    connection.connect();\\n    return () => {\\n      connection.disconnect();\\n    };\\n  }, [serverUrl, roomId]);\\n  // ...\\n}\\n```\\n\\nSee more examples below.\\n\\nParameters {/parameters/}\", metadata={'source': 'react.dev-main/src/content/reference/react/useEffect.md'}),\n",
-       " Document(page_content='title: React Reference Overview\\n\\nThis section provides detailed reference documentation for working with React. For an introduction to React, please visit the Learn section.\\n\\nThe React reference documentation is broken down into functional subsections:\\n\\nReact {/react/}\\n\\nProgrammatic React features:\\n\\nHooks - Use different React features from your components.\\n\\nComponents - Documents built-in components that you can use in your JSX.\\n\\nAPIs - APIs that are useful for defining components.\\n\\nDirectives - Provide instructions to bundlers compatible with React Server Components.\\n\\nReact DOM {/react-dom/}\\n\\nReact-dom contains features that are only supported for web applications (which run in the browser DOM environment). This section is broken into the following:', metadata={'source': 'react.dev-main/src/content/reference/react/index.md'}),\n",
        " Document(page_content=\"title: useEffect\\n\\nuseEffect is a React Hook that lets you synchronize a component with an external system.\\n\\njs\\nuseEffect(setup, dependencies?)\\n\\nReference {/reference/}\\n\\nuseEffect(setup, dependencies?) {/useeffect/}\\n\\nCall useEffect at the top level of your component to declare an Effect:\\n\\n```js\\nimport { useEffect } from 'react';\\nimport { createConnection } from './chat.js';\\n\\nfunction ChatRoom({ roomId }) {\\n  const [serverUrl, setServerUrl] = useState('https://localhost:1234');\\n\\nuseEffect(() => {\\n    const connection = createConnection(serverUrl, roomId);\\n    connection.connect();\\n    return () => {\\n      connection.disconnect();\\n    };\\n  }, [serverUrl, roomId]);\\n  // ...\\n}\\n```\\n\\nSee more examples below.\\n\\nParameters {/parameters/}\", metadata={'source': 'react.dev-main/src/content/reference/react/useEffect.md'}),\n",
+       " Document(page_content=\"```js\\nimport { useState, useEffect } from 'react';\\n\\nfunction useTime() {\\n  // 1. Keep track of the current date's state. useState receives an initializer function as its\\n  //    initial state. It only runs once when the hook is called, so only the current date at the\\n  //    time the hook is called is set first.\\n  const [time, setTime] = useState(() => new Date());\\n\\nuseEffect(() => {\\n    // 2. Update the current date every second using setInterval.\\n    const id = setInterval(() => {\\n      setTime(new Date()); // ✅ Good: non-idempotent code no longer runs in render\\n    }, 1000);\\n    // 3. Return a cleanup function so we don't leak the setInterval timer.\\n    return () => clearInterval(id);\\n  }, []);\\n\\nreturn time;\\n}\", metadata={'source': 'react.dev-main/src/content/reference/rules/components-and-hooks-must-be-pure.md'}),\n",
        " Document(page_content='title: \"Built-in React Hooks\"\\n\\nHooks let you use different React features from your components. You can either use the built-in Hooks or combine them to build your own. This page lists all built-in Hooks in React.\\n\\nState Hooks {/state-hooks/}\\n\\nState lets a component \"remember\" information like user input. For example, a form component can use state to store the input value, while an image gallery component can use state to store the selected image index.\\n\\nTo add state to a component, use one of these Hooks:\\n\\nuseState declares a state variable that you can update directly.\\n\\nuseReducer declares a state variable with the update logic inside a reducer function.\\n\\njs\\nfunction ImageGallery() {\\n  const [index, setIndex] = useState(0);\\n  // ...\\n\\nContext Hooks {/context-hooks/}', metadata={'source': 'react.dev-main/src/content/reference/react/hooks.md'}),\n",
        " Document(page_content='title: Rules of React\\n\\nJust as different programming languages have their own ways of expressing concepts, React has its own idioms — or rules — for how to express patterns in a way that is easy to understand and yields high-quality applications.\\n\\nTo learn more about expressing UIs with React, we recommend reading Thinking in React.\\n\\nThis section describes the rules you need to follow to write idiomatic React code. Writing idiomatic React code can help you write well organized, safe, and composable applications. These properties make your app more resilient to changes and makes it easier to work with other developers, libraries, and tools.', metadata={'source': 'react.dev-main/src/content/reference/rules/index.md'}),\n",
        " Document(page_content=\"Side effects are typically written inside of event handlers or Effects. But never during render.\\n\\nWhile render must be kept pure, side effects are necessary at some point in order for your app to do anything interesting, like showing something on the screen! The key point of this rule is that side effects should not run in render, as React can render components multiple times. In most cases, you'll use event handlers to handle side effects. Using an event handler explicitly tells React that this code doesn't need to run during render, keeping render pure. If you've exhausted all options – and only as a last resort – you can also handle side effects using useEffect.\\n\\nWhen is it okay to have mutation? {/mutation/}\\n\\nLocal mutation {/local-mutation/}\", metadata={'source': 'react.dev-main/src/content/reference/rules/components-and-hooks-must-be-pure.md'}),\n",
@@ -209,7 +209,7 @@
        " Document(page_content=\"new Date() is not idempotent as it always returns the current date and changes its result every time it's called. When you render the above component, the time displayed on the screen will stay stuck on the time that the component was rendered. Similarly, functions like Math.random() also aren't idempotent, because they return different results every time they're called, even when the inputs are the same.\\n\\nThis doesn't mean you shouldn't use non-idempotent functions like new Date() at all – you should just avoid using them during render. In this case, we can synchronize the latest date to this component using an Effect:\\n\\n```js\\nimport { useState, useEffect } from 'react';\", metadata={'source': 'react.dev-main/src/content/reference/rules/components-and-hooks-must-be-pure.md'})]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
